--- a/package.json
+++ b/package.json
@@ -3,25 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
     "dev": "./node_modules/.bin/nodemon bin/www",
+    "start": "node bin/www",
     "prd": "pm2 start bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "debug": "^2.6.3",
+    "jsonwebtoken": "^8.4.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.6.0",
     "koa-logger": "^2.0.1",
     "koa-multer": "^1.0.2",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
+    "koa-views": "^5.2.1",
     "lodash": "^4.17.15",
     "mysql2": "^1.6.5",
+    "pug": "^2.0.0-rc.1",
     "sequelize": "^4.42.1"
   },
   "devDependencies": {
