--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-multer": "^1.0.2",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
+    "koa-send": "^5.0.0",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "lodash": "^4.17.15",
